Created attack timer. I also just realised i don't need 2 timers. They should both work at the same time...always.

--- a/scoreboard.css
+++ b/scoreboard.css
@@ -201,3 +201,16 @@ background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(99, 98, 98, 1) 50%, 
     text-align: center;
 
 }
+
+.timers-wrap{
+    display: flex;
+    flex-direction:column;
+    /* background-color: red; */
+    color: #fff;
+    padding: 15px;
+    gap: 20px;
+    align-items: flex-start
+}
+.timers-wrap button{
+    padding: 15px;
+}
